{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 242,
  "lineage": "47df3f51-c7b8-6a9a-0110-94105b55814f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:network-acl/acl-06b46490a6e88372a",
            "default_network_acl_id": "acl-06b46490a6e88372a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06b46490a6e88372a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "282012117802",
            "subnet_ids": [
              "subnet-03796cde88707f139",
              "subnet-03d018fdd608a8af5",
              "subnet-05deef994cb1ef6d5",
              "subnet-0b82d23ecf8d6363e"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a32d7fce62ea2086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:route-table/rtb-0d81bb5b212733cc7",
            "default_route_table_id": "rtb-0d81bb5b212733cc7",
            "id": "rtb-0d81bb5b212733cc7",
            "owner_id": "282012117802",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a32d7fce62ea2086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:security-group/sg-0f06a3783e47640ba",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f06a3783e47640ba",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "282012117802",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a32d7fce62ea2086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ff3a45d4b4ca275",
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:elastic-ip/eipalloc-00ff3a45d4b4ca275",
            "domain": "vpc",
            "id": "eipalloc-00ff3a45d4b4ca275",
            "network_border_group": "ap-southeast-3",
            "public_dns": "ec2-108-137-183-119.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "108.137.183.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-ap-southeast-3a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-ap-southeast-3a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:internet-gateway/igw-057f50800e70e6732",
            "id": "igw-057f50800e70e6732",
            "owner_id": "282012117802",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a32d7fce62ea2086"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ff3a45d4b4ca275",
            "association_id": "eipassoc-04503ad3b10e6d050",
            "connectivity_type": "public",
            "id": "nat-0bea5676badeb03c5",
            "network_interface_id": "eni-09c01ed3c23517560",
            "private_ip": "10.0.11.78",
            "public_ip": "108.137.183.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d018fdd608a8af5",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-ap-southeast-3a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-ap-southeast-3a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f4f0be5375718eed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bea5676badeb03c5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f4f0be5375718eed",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-057f50800e70e6732",
            "id": "r-rtb-0214b04937d46b0f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0214b04937d46b0f3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:route-table/rtb-0f4f0be5375718eed",
            "id": "rtb-0f4f0be5375718eed",
            "owner_id": "282012117802",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a32d7fce62ea2086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:route-table/rtb-0214b04937d46b0f3",
            "id": "rtb-0214b04937d46b0f3",
            "owner_id": "282012117802",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057f50800e70e6732",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a32d7fce62ea2086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03df7261d1b50355b",
            "route_table_id": "rtb-0f4f0be5375718eed",
            "subnet_id": "subnet-05deef994cb1ef6d5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de61057526aadf90",
            "route_table_id": "rtb-0f4f0be5375718eed",
            "subnet_id": "subnet-03796cde88707f139"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a3ec3f579237bd7",
            "route_table_id": "rtb-0214b04937d46b0f3",
            "subnet_id": "subnet-03d018fdd608a8af5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfc33316a310ee94",
            "route_table_id": "rtb-0214b04937d46b0f3",
            "subnet_id": "subnet-0b82d23ecf8d6363e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:subnet/subnet-05deef994cb1ef6d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05deef994cb1ef6d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282012117802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-private-ap-southeast-3a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-private-ap-southeast-3a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a32d7fce62ea2086"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:subnet/subnet-03796cde88707f139",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03796cde88707f139",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282012117802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-private-ap-southeast-3b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-private-ap-southeast-3b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a32d7fce62ea2086"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:subnet/subnet-03d018fdd608a8af5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d018fdd608a8af5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282012117802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-public-ap-southeast-3a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-public-ap-southeast-3a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a32d7fce62ea2086"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:subnet/subnet-0b82d23ecf8d6363e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b82d23ecf8d6363e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282012117802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-public-ap-southeast-3b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13-public-ap-southeast-3b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a32d7fce62ea2086"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:282012117802:vpc/vpc-0a32d7fce62ea2086",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b46490a6e88372a",
            "default_route_table_id": "rtb-0d81bb5b212733cc7",
            "default_security_group_id": "sg-0f06a3783e47640ba",
            "dhcp_options_id": "dopt-04791ff0eee16f0dd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a32d7fce62ea2086",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d81bb5b212733cc7",
            "owner_id": "282012117802",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-b13",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-b13",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}